# Immersiveserver

./: .gitignore  CLAUDE.md  README.md  run.sh
camera-effects/: Cargo.toml
camera-effects/models/: README.md
camera-effects/src/: app.rs  lib.rs  main.rs
camera-effects/src/camera/: mod.rs
camera-effects/src/effects/: mod.rs
camera-effects/src/effects/hand_interaction/: mod.rs
camera-effects/src/effects/paint_warp/: mod.rs
camera-effects/src/effects/person_particles/: mod.rs
camera-effects/src/ml/: mod.rs
camera-effects/src/network/: mod.rs  spout.rs  spout_ffi.rs  syphon.rs  syphon_ffi.rs  texture_share.rs
camera-effects/src/shaders/: hand_interaction.wgsl  masked_passthrough.wgsl  paint_warp.wgsl  particle.wgsl  passthrough.wgsl
camera-effects/src/ui/: mod.rs
immersive-dashboard/: index.html  main.js  package-lock.json  package.json  server.js
immersive-player/: .gitignore  Cargo.toml  README.md
immersive-player/examples/: dual_projector.rs
immersive-player/installer/: Info.plist  build-pkg.sh  distribution.xml  entitlements.plist
immersive-player/installer/resources/: conclusion.html  readme.html  welcome.html
immersive-player/src/: app.rs  lib.rs  main.rs
immersive-player/src/api/: handlers.rs  mod.rs  protocol.rs  server.rs
immersive-player/src/composition/: clip.rs  layer.rs  mod.rs  playback.rs  settings.rs
immersive-player/src/converter/: ffmpeg.rs  formats.rs  job.rs  mod.rs  queue.rs  window.rs
immersive-player/src/output/: aqueduct_output.rs  blend.rs  device.rs  mask.rs  mod.rs  receiver_control.rs  screen.rs  slice.rs  warp.rs  window_output.rs
immersive-player/src/project/: immersive_format.rs  mod.rs  preset.rs
immersive-player/src/render/: compositor.rs  mod.rs  pipeline.rs
immersive-player/src/render/shaders/: blend.wgsl  composite.wgsl  layer_composite.wgsl  warp.wgsl
immersive-player/src/ui/: advanced_output.rs  blend_panel.rs  clip_matrix.rs  layer_controls.rs  main_window.rs  mod.rs  output_editor.rs  preview_monitor.rs  screen_manager.rs  screen_tree.rs  warp_panel.rs  widgets.rs
immersive-player/src/video/: hap_decoder.rs  mod.rs  player.rs  texture_pool.rs
immersive-receiver/: Package.swift  README.md
immersive-receiver/ImmersiveReceiver.app/Contents/: Info.plist  PkgInfo
immersive-receiver/ImmersiveReceiverMac/: ContentView.swift  ImmersiveReceiverApp.swift  Info.plist
immersive-receiver/ImmersiveReceiveriOS/: ContentView.swift  ImmersiveReceiverApp.swift
immersive-server/: Cargo.toml  build.rs  build_plan.md
immersive-server/.cargo/: config.toml
immersive-server/docs/: advanced_output_plan.md  api-reference.md  build_plan.md  effects-system.md  egui-widgets.md  menu-system.md  omt-evaluation.md  output_plan_seed.md  potential_optimizations.md  projmap-calibrator.md  resolume-comparison.md  smoothing_plan.md  telemetry.md
immersive-server/examples/: decode_to_texture.rs  decode_video.rs  play_video.rs
immersive-server/src/: app.rs  gpu_context.rs  layer_runtime.rs  lib.rs  main.rs  preview_player.rs  settings.rs
immersive-server/src/api/: dashboard.html  dashboard.rs  mod.rs  routes.rs  server.rs  shared.rs  state.rs  types.rs  websocket.rs
immersive-server/src/audio/: fft.rs  manager.rs  mod.rs  ndi_source.rs  omt_source.rs  source.rs  system_input.rs  types.rs
immersive-server/src/compositor/: blend.rs  clip.rs  environment.rs  layer.rs  mod.rs  viewport.rs
immersive-server/src/converter/: mod.rs  window.rs
immersive-server/src/effects/: automation.rs  manager.rs  mod.rs  registry.rs  runtime.rs  traits.rs  types.rs
immersive-server/src/effects/builtin/: auto_mask.rs  color_correction.rs  heat.rs  image_rain.rs  invert.rs  mod.rs  multiplex.rs  poop_rain.rs  slide.rs
immersive-server/src/network/: discovery.rs  mod.rs  ndi.rs  ndi_capture.rs  ndi_ffi.rs  omt.rs  omt_capture.rs  omt_ffi.rs  spout.rs  spout_capture.rs  spout_ffi.rs  syphon.rs  syphon_ffi.rs  texture_share.rs
immersive-server/src/output/: color.rs  display.rs  edge_blend.rs  mask.rs  mod.rs  preset.rs  runtime.rs  screen.rs  slice.rs  warp.rs
immersive-server/src/previs/: camera.rs  mesh.rs  mod.rs  renderer.rs  types.rs
immersive-server/src/shaders/: fullscreen_quad.wgsl  mod.rs  previs_3d.wgsl  test_pattern.wgsl
immersive-server/src/shaders/effects/: auto_mask.wgsl  color_correction.wgsl  common.wgsl  heat.wgsl  invert.wgsl  multiplex.wgsl  poop_rain.wgsl  poop_rain_copy.wgsl  poop_rain_edges.wgsl  slide.wgsl
immersive-server/src/shaders/output/: blit.wgsl  screen_composite.wgsl  slice_render.wgsl
immersive-server/src/telemetry/: logging.rs  metrics.rs  mod.rs  profiling.rs
immersive-server/src/ui/: advanced_output_window.rs  clip_grid_panel.rs  dock.rs  effects_browser_panel.rs  file_browser_panel.rs  icons.rs  layout_preset.rs  menu_bar.rs  menu_definition.rs  mod.rs  native_menu.rs  performance_panel.rs  preferences_window.rs  preview_monitor_panel.rs  previs_panel.rs  properties_panel.rs  sources_panel.rs  thumbnail_cache.rs  tiled_layout.rs  viewport_widget.rs  widgets.rs  window_registry.rs
immersive-server/src/video/: decoder.rs  frame.rs  hap.rs  mod.rs  player.rs  renderer.rs  texture.rs
immersiver-receiver-ios/: README.md
immersiver-receiver-ios/ImmersiveReceiverIOS/: AppState.swift  ContentView.swift  ImmersiveReceiverApp.swift  Info.plist
immersiver-receiver-ios/ImmersiveReceiverIOS/Views/: OverlayMenuView.swift  (+1 more)
projmap-calibrator/: Cargo.toml
projmap-calibrator/.cargo/: config.toml
projmap-calibrator/src/: app.rs  lib.rs  main.rs
projmap-calibrator/src/blending/: mod.rs  overlap.rs
projmap-calibrator/src/calibration/: decoder.rs  gray_code.rs  homography.rs  mod.rs  session.rs
projmap-calibrator/src/camera/: mod.rs  ndi_ffi.rs  ndi_input.rs
projmap-calibrator/src/config/: mod.rs
projmap-calibrator/src/export/: mod.rs
projmap-calibrator/src/projector/: mod.rs
projmap-calibrator/src/render/: mod.rs  pattern.rs  pipeline.rs  preview.rs
projmap-calibrator/src/render/shaders/: edge_blend.wgsl  gray_code.wgsl  preview.wgsl
projmap-calibrator/src/ui/: mod.rs
(+24 files in other folders)
