[package]
name = "immersive-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Graphics
wgpu = "24"
winit = "0.30"

# GUI
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"

# Video decoding
ffmpeg-next = "7.1"

# Hap codec decompression
snap = "1"        # Snappy decompression for Hap
lz4_flex = "0.11" # LZ4 decompression for Hap Q

# Async runtime
pollster = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }

# Utilities
bytemuck = { version = "1", features = ["derive"] }
dirs = "6"

# File watching (for shader hot-reload)
notify = "7"

# HAP Converter
rfd = "0.14"      # Native file dialogs
which = "6.0"     # Find FFmpeg in PATH

# Async runtime for networking
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "time", "macros"] }
bytes = "1.5"     # Zero-copy byte buffers

# OMT (Open Media Transport) - Aqueduct Rust implementation
aqueduct = { path = "../external_libraries/Aqueduct (Rust OMT)", default-features = false }

# mDNS for OMT service discovery
mdns-sd = "0.10"

# Hostname detection for mDNS registration
hostname = "0.4"

[[example]]
name = "decode_video"
path = "examples/decode_video.rs"

[[example]]
name = "decode_to_texture"
path = "examples/decode_to_texture.rs"

[[example]]
name = "play_video"
path = "examples/play_video.rs"
