[package]
name = "immersive-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Graphics
wgpu = "24"
winit = "0.30"

# GUI
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"

# Video decoding
ffmpeg-next = "7.1"

# Hap codec decompression
snap = "1"        # Snappy decompression for Hap
lz4_flex = "0.11" # LZ4 decompression for Hap Q

# Async runtime
pollster = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time"] }
tracing-appender = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }

# Utilities
bytemuck = { version = "1", features = ["derive"] }
dirs = "6"
rand = "0.9"
glam = "0.29"  # 3D math for previs

# File watching (for shader hot-reload)
notify = "7"

# HAP Converter
rfd = "0.14"      # Native file dialogs
which = "6.0"     # Find FFmpeg in PATH

# Async runtime for networking
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "time", "macros"] }
bytes = "1.5"     # Zero-copy byte buffers

# OMT (Open Media Transport) - Aqueduct Rust implementation
aqueduct = { path = "../external_libraries/Aqueduct (Rust OMT)", default-features = false }

# mDNS for OMT service discovery
mdns-sd = "0.10"

# REST API server
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1"
futures-util = { version = "0.3", features = ["sink"] }

# Hostname detection for mDNS registration
hostname = "0.4"

# Image loading for effect textures
image = "0.25"

# Native OS menu bars (macOS/Windows)
muda = "0.17"

# Audio input/output
cpal = "0.15"

# FFT analysis for audio-reactive effects
rustfft = "6.2"

# Syphon/Spout texture sharing (platform-specific)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-metal = "0.3"
objc2-quartz-core = "0.3"
objc2-app-kit = "0.3"
block2 = "0.6"
# For accessing underlying Metal device/texture from wgpu
wgpu-hal = { version = "24", features = ["metal"] }
metal = "0.31"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
# For dynamic loading of SpoutLibrary.dll
libloading = "0.8"
# For accessing underlying DX12 device/texture from wgpu
wgpu-hal = { version = "24", features = ["dx12"] }

[[example]]
name = "decode_video"
path = "examples/decode_video.rs"

[[example]]
name = "decode_to_texture"
path = "examples/decode_to_texture.rs"

[[example]]
name = "play_video"
path = "examples/play_video.rs"
